syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.amberai.grpc";
option java_outer_classname = "GrpcLib";
//option objc_class_prefix = "HLW";

package grpc;

// The service definition.
service UserService {
	rpc getUserById (getUserByIdRequest) returns (GrpcReply) {}
}

service BookService {
	rpc addBook (addBookRequest) returns (GrpcReply) {}
}

/************************************************************/

message GrpcReply {
	int32 code = 1;
	string data = 2;
}

message getUserByIdRequest {
	int32 id = 1;
}

message addBookRequest {
	int32 id = 1;
	string name = 2;
	double price = 3;
}




